--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "86a99c7e",
+   "id": "229ead69",
    "metadata": {},
    "outputs": [
     {
@@ -156,97 +156,97 @@
     "import pandas as pd\n",
     "import math\n",
     "\n",
-    "# Example source data\n",
+    "# Sample DataFrame (Replace with your actual data)\n",
     "data = {\n",
-    "    \"FTE\": [6.5, -12.3, 3, 0, None, 10],\n",
-    "    \"Type\": [\"BC-TT\", \"Investments\", \"Saves\", \"Other\", \"Saves\", \"BC-TT\"],\n",
-    "    \"GM\": [0, 0, 0, 0, 0, 1],\n",
-    "    \"MD\": [0, 0, 0, 0, 0, 0],\n",
-    "    \"3\": [0, 0, 0, 0, 0, 2],\n",
-    "    \"4\": [2.5, -4, 0, 0, 0, 0],\n",
-    "    \"5\": [0, 0, 0, 0, 0, 0],\n",
-    "    \"6\": [3, -6, 0, 0, 0, 3],\n",
-    "    \"7\": [1, -1, 1, 0, 0, 4],\n",
-    "    \"8\": [0, -1.3, 0, 0, 0, 0],\n",
-    "    \"Entity\": [\"Entity1\", \"Entity2\", \"Entity3\", \"Entity4\", \"Entity5\", \"Entity6\"],\n",
-    "    \"Description\": [\"Example 1\", \"Example 2\", \"Example 3\", \"Example 4\", \"Example 5\", \"Example 6\"],\n",
-    "    \"Country\": [\"Country1\", \"Country2\", \"Country3\", \"Country4\", \"Country5\", \"Country6\"],\n",
-    "    \"RTN\": [\"RTN 123 - Example\", \"RTN 456 - Sample\", \"RTN 789 - Test\", \"RTN 101 - Case\", \"RTN 112 - Trial\", \"RTN 113 - Check\"]\n",
+    "    \"FTE\": [1, -1, 6.5, -3.2, 2],\n",
+    "    \"Type\": [\"Other\", \"BC-TT\", \"Other\", \"Investments\", \"Saves\"],\n",
+    "    \"RTN\": [\"RTN 123 - Details\", \"RTN 456 - Info\", \"RTN 789 - More\", \"RTN 012 - Example\", \"RTN 345 - Data\"],\n",
+    "    \"Country\": [\"US\", \"UK\", \"IN\", \"CA\", \"AU\"],\n",
+    "    \"Entity\": [\"Entity1\", \"Entity2\", \"Entity3\", \"Entity4\", \"Entity5\"],\n",
+    "    \"Description\": [\"Desc1\", \"Desc2\", \"Desc3\", \"Desc4\", \"Desc5\"],\n",
+    "    \"4\": [3, 0, -1, 0, 0],\n",
+    "    \"5\": [0, 0, 0, 0, -2],\n",
+    "    \"6\": [0, -1, -3.5, 0, 0],\n",
     "}\n",
-    "\n",
     "source_df = pd.DataFrame(data)\n",
     "\n",
-    "# Columns to check for GCB values\n",
-    "gcb_columns = [\"GM\", \"MD\", \"3\", \"4\", \"5\", \"6\", \"7\", \"8\"]\n",
-    "\n",
-    "# Clean and convert FTE column\n",
-    "source_df[\"FTE\"] = pd.to_numeric(source_df[\"FTE\"], errors=\"coerce\")\n",
-    "\n",
-    "# Filter rows where FTE is valid and does not equal 0\n",
+    "# Filter FTE conditions\n",
     "filtered_df = source_df[\n",
-    "    source_df[\"FTE\"].notnull() & (source_df[\"FTE\"] != 0) & (source_df[\"Type\"].isin([\"BC-TT\", \"Investments\", \"Saves\"]))\n",
-    "]\n",
+    "    (source_df[\"FTE\"].notnull()) &\n",
+    "    (source_df[\"FTE\"] != 0) &\n",
+    "    (source_df[\"FTE\"] != 0.0) &\n",
+    "    (source_df[\"Type\"].isin([\"BC-TT\", \"Investments\", \"Saves\"]))\n",
+    "].copy()\n",
     "\n",
-    "# Create the template dataframe with required columns\n",
-    "template_columns = [\n",
-    "    \"Big Grid Stack\", \"AOP YEAR\", \"Business Framework RTN Code\",\n",
-    "    \"Business Framework\", \"Business Framework Group\", \"Country\",\n",
-    "    \"GCB\", \"Emp. Type\", \"Hiring Source\", \"FTE\", \"Start Month\",\n",
-    "    \"WPB\", \"GBM\", \"CMB\", \"Diver\", \"Entity\", \"Description\"\n",
-    "]\n",
-    "template_df = pd.DataFrame(columns=template_columns)\n",
+    "# Function to assign Big Grid Stack\n",
+    "def assign_big_grid_stack(row):\n",
+    "    if row[\"Type\"] == \"BC-TT\":\n",
+    "        return \"Inter Boundary Changes\"\n",
+    "    elif row[\"FTE\"] == 1:\n",
+    "        return \"New Perm Position (within FRP) -Staff Drawdown\"\n",
+    "    elif row[\"FTE\"] == -1:\n",
+    "        return \"Forecast program/Other Saves-Saves Forecast Tracker\"\n",
+    "    else:\n",
+    "        return None\n",
     "\n",
-    "# Process each row in the filtered dataframe\n",
-    "for _, row in filtered_df.iterrows():\n",
-    "    fte_value = row[\"FTE\"]\n",
-    "    duplicate_fte = -1 if fte_value < 0 else 1  # Determine positive or negative FTE\n",
-    "    abs_fte = abs(fte_value)\n",
-    "    int_part = math.floor(abs_fte)  # Integer part of FTE\n",
-    "    fractional_part = abs_fte - int_part  # Fractional part of FTE\n",
+    "# Add Big Grid Stack column\n",
+    "filtered_df[\"Big Grid Stack\"] = filtered_df.apply(assign_big_grid_stack, axis=1)\n",
     "\n",
-    "    # Calculate GCB distribution\n",
+    "# Function to process fractional and large FTE values\n",
+    "def split_fte_rows(row, gcb_columns):\n",
+    "    fte_value = math.ceil(row[\"FTE\"])\n",
+    "    fte_whole_part = math.floor(abs(row[\"FTE\"]))  # Whole part of FTE\n",
+    "    fte_fractional_part = abs(row[\"FTE\"]) - fte_whole_part  # Fractional part\n",
     "    gcb_distribution = []\n",
+    "    \n",
     "    for col in gcb_columns:\n",
-    "        if not pd.isna(row[col]) and row[col] != 0:\n",
-    "            gcb_distribution.extend([col] * abs(math.ceil(row[col])))\n",
+    "        value = pd.to_numeric(row[col], errors=\"coerce\")\n",
+    "        if not pd.isna(value) and value != 0:\n",
+    "            gcb_distribution.extend([col] * abs(math.ceil(value)))\n",
     "\n",
-    "    # Ensure GCB distribution matches the FTE rows\n",
-    "    total_required_rows = int_part + (1 if fractional_part > 0 else 0)\n",
-    "    if len(gcb_distribution) < total_required_rows:\n",
-    "        gcb_distribution.extend([\"na\"] * (total_required_rows - len(gcb_distribution)))\n",
+    "    # Create rows for FTE\n",
+    "    new_rows = []\n",
+    "    for i in range(fte_whole_part):\n",
+    "        new_row = row.copy()\n",
+    "        new_row[\"FTE\"] = 1 if row[\"FTE\"] > 0 else -1\n",
+    "        new_row[\"GCB\"] = gcb_distribution[i] if i < len(gcb_distribution) else \"na\"\n",
+    "        new_rows.append(new_row)\n",
     "\n",
-    "    # Create rows in the template\n",
-    "    for i in range(total_required_rows):\n",
-    "        current_fte = (\n",
-    "            fractional_part if i == total_required_rows - 1 and fractional_part > 0 else 1\n",
-    "        ) * duplicate_fte\n",
+    "    # Add fractional FTE row if applicable\n",
+    "    if fte_fractional_part > 0:\n",
+    "        new_row = row.copy()\n",
+    "        new_row[\"FTE\"] = fte_fractional_part if row[\"FTE\"] > 0 else -fte_fractional_part\n",
+    "        new_row[\"GCB\"] = gcb_distribution[fte_whole_part] if fte_whole_part < len(gcb_distribution) else \"na\"\n",
+    "        new_rows.append(new_row)\n",
     "\n",
-    "        new_row = {\n",
-    "            \"Big Grid Stack\": (\n",
-    "                \"New Perm Position (within FRP) - Staff Drawdown\" if current_fte > 0\n",
-    "                else \"Forecast program/Other Saves-Saves Forecast Tracker\"\n",
-    "            ),\n",
-    "            \"AOP YEAR\": \"FY25\",\n",
-    "            \"Business Framework RTN Code\": row[\"RTN\"].split()[0],\n",
-    "            \"Business Framework\": \"\",\n",
-    "            \"Business Framework Group\": \"\",\n",
-    "            \"Country\": row[\"Country\"],\n",
-    "            \"GCB\": gcb_distribution[i],\n",
-    "            \"Emp. Type\": \"FTE\",\n",
-    "            \"Hiring Source\": \"External\",\n",
-    "            \"FTE\": current_fte,\n",
-    "            \"Start Month\": \"01/31/2025\",  # Example logic for Start Month, modify as needed\n",
-    "            \"WPB\": \"0%\",\n",
-    "            \"GBM\": \"100.00%\",\n",
-    "            \"CMB\": \"0%\",\n",
-    "            \"Diver\": \"\",\n",
-    "            \"Entity\": row[\"Entity\"],\n",
-    "            \"Description\": row[\"Description\"],\n",
-    "        }\n",
-    "        template_df = pd.concat([template_df, pd.DataFrame([new_row])], ignore_index=True)\n",
+    "    return new_rows\n",
     "\n",
-    "# Output the result\n",
-    "print(template_df)\n"
+    "# Columns used for GCB assignment\n",
+    "gcb_columns = [\"4\", \"5\", \"6\"]\n",
+    "\n",
+    "# Process each row and expand as needed\n",
+    "expanded_rows = []\n",
+    "for _, row in filtered_df.iterrows():\n",
+    "    expanded_rows.extend(split_fte_rows(row, gcb_columns))\n",
+    "\n",
+    "# Create final DataFrame\n",
+    "final_df = pd.DataFrame(expanded_rows)\n",
+    "\n",
+    "# Add additional template columns\n",
+    "final_df[\"AOP YEAR\"] = \"FY25\"\n",
+    "final_df[\"Business Framework\"] = \"\"\n",
+    "final_df[\"Business Framework Group\"] = \"\"\n",
+    "final_df[\"Hiring Source\"] = \"External\"\n",
+    "final_df[\"WPB\"] = \"0%\"\n",
+    "final_df[\"GBM\"] = \"100.00%\"\n",
+    "final_df[\"CMB\"] = \"0%\"\n",
+    "final_df[\"Diver\"] = \"\"\n",
+    "final_df[\"Start Month\"] = final_df[\"FTE\"].apply(\n",
+    "    lambda fte: \"01/31/2025\" if fte < 0 else None\n",
+    ")\n",
+    "\n",
+    "# Final Output\n",
+    "print(final_df)\n"
    ]
   },
   {
