--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "cadb19f7",
+   "id": "ff6a63bd",
    "metadata": {},
    "outputs": [
     {
@@ -155,6 +155,7 @@
    "source": [
     "import pandas as pd\n",
     "import math\n",
+    "import datetime\n",
     "\n",
     "# Example source data\n",
     "data = {\n",
@@ -196,16 +197,6 @@
     "]\n",
     "template_df = pd.DataFrame(columns=template_columns)\n",
     "\n",
-    "# Function to assign Big Grid Stack\n",
-    "def get_big_grid_stack(fte, row_type):\n",
-    "    if row_type == \"BC-TT\":\n",
-    "        return \"Inter Boundary Changes\"\n",
-    "    if fte == 1 or fte > 0:\n",
-    "        return \"New Perm Position (within FRP) - Staff Drawdown\"\n",
-    "    elif fte == -1 or fte < 0:\n",
-    "        return \"Forecast program/Other Saves-Saves Forecast Tracker\"\n",
-    "    return None\n",
-    "\n",
     "# Process each row in the filtered dataframe\n",
     "for _, row in filtered_df.iterrows():\n",
     "    fte_value = row[\"FTE\"]\n",
@@ -226,14 +217,30 @@
     "    if len(gcb_distribution) < total_required_rows:\n",
     "        gcb_distribution.extend([\"na\"] * (total_required_rows - len(gcb_distribution)))\n",
     "\n",
+    "    # Dynamically calculate Start Month\n",
+    "    current_year = 2025\n",
+    "    if fte_value > 0:\n",
+    "        start_month = datetime.date(current_year, 1, 31).strftime(\"%m/%d/%Y\")  # Example logic for positive FTE\n",
+    "    elif fte_value < 0:\n",
+    "        start_month = datetime.date(current_year, 2, 28).strftime(\"%m/%d/%Y\")  # Example logic for negative FTE\n",
+    "    else:\n",
+    "        start_month = datetime.date(current_year, 12, 31).strftime(\"%m/%d/%Y\")  # Default fallback\n",
+    "\n",
     "    # Create rows in the template\n",
     "    for i in range(total_required_rows):\n",
     "        current_fte = (\n",
     "            fractional_part if i == total_required_rows - 1 and fractional_part > 0 else 1\n",
     "        ) * duplicate_fte\n",
     "\n",
+    "        big_grid_stack = (\n",
+    "            \"New Perm Position (within FRP) - Staff Drawdown\" if current_fte > 0\n",
+    "            else \"Forecast program/Other Saves-Saves Forecast Tracker\"\n",
+    "        )\n",
+    "        if row[\"Type\"] == \"BC-TT\":\n",
+    "            big_grid_stack = \"Inter Boundary Changes\"\n",
+    "\n",
     "        new_row = {\n",
-    "            \"Big Grid Stack\": get_big_grid_stack(current_fte, row[\"Type\"]),\n",
+    "            \"Big Grid Stack\": big_grid_stack,\n",
     "            \"AOP YEAR\": \"FY25\",\n",
     "            \"Business Framework RTN Code\": row[\"RTN\"].split()[0],\n",
     "            \"Business Framework\": \"\",\n",
@@ -243,7 +250,7 @@
     "            \"Emp. Type\": \"FTE\",\n",
     "            \"Hiring Source\": \"External\",\n",
     "            \"FTE\": current_fte,\n",
-    "            \"Start Month\": \"01/31/2025\",  # Example logic for Start Month, modify as needed\n",
+    "            \"Start Month\": start_month,\n",
     "            \"WPB\": \"0%\",\n",
     "            \"GBM\": \"100.00%\",\n",
     "            \"CMB\": \"0%\",\n",
