--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -2,6 +2,74 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "3943eb47",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import datetime as dt\n",
+    "import win32com.client\n",
+    "\n",
+    "# Load the Excel file\n",
+    "file_path = \"special_days.xlsx\"  # Replace with your Excel file path\n",
+    "df = pd.read_excel(file_path)\n",
+    "\n",
+    "# Get the current year\n",
+    "current_year = dt.datetime.now().year\n",
+    "\n",
+    "# Initialize Outlook\n",
+    "outlook = win32com.client.Dispatch(\"Outlook.Application\")\n",
+    "\n",
+    "# Process each row in the file\n",
+    "for _, row in df.iterrows():\n",
+    "    name = row[\"Names\"]\n",
+    "    birthday = pd.to_datetime(row[\"Birthday\"], errors=\"coerce\").date() if not pd.isna(row[\"Birthday\"]) else None\n",
+    "    work_anniversary = pd.to_datetime(row[\"Work Anniversary\"], errors=\"coerce\").date() if not pd.isna(row[\"Work Anniversary\"]) else None\n",
+    "    wedding_anniversary = pd.to_datetime(row[\"Wedding Anniversary\"], errors=\"coerce\").date() if not pd.isna(row[\"Wedding Anniversary\"]) else None\n",
+    "    spouse_name = row[\"Spouse Name\"] if not pd.isna(row[\"Spouse Name\"]) else \"\"\n",
+    "\n",
+    "    # Function to create a reminder in Outlook\n",
+    "    def create_reminder(event_date, subject, body):\n",
+    "        if event_date:\n",
+    "            # Set the event date to the current year\n",
+    "            event_date = event_date.replace(year=current_year)\n",
+    "            # Check if the date is in the future\n",
+    "            if event_date >= dt.datetime.now().date():\n",
+    "                appointment = outlook.CreateItem(1)  # 1 = Appointment item\n",
+    "                appointment.Subject = subject\n",
+    "                appointment.Start = dt.datetime.combine(event_date, dt.datetime.min.time())\n",
+    "                appointment.Duration = 15  # 15-minute reminder\n",
+    "                appointment.ReminderSet = True\n",
+    "                appointment.ReminderMinutesBeforeStart = 10\n",
+    "                appointment.Body = body\n",
+    "                appointment.Save()\n",
+    "\n",
+    "    # Create reminders for each event type\n",
+    "    if birthday:\n",
+    "        create_reminder(\n",
+    "            birthday,\n",
+    "            f\"Reminder: {name}'s Birthday!\",\n",
+    "            f\"Don't forget to wish {name} a Happy Birthday!\"\n",
+    "        )\n",
+    "    if work_anniversary:\n",
+    "        create_reminder(\n",
+    "            work_anniversary,\n",
+    "            f\"Reminder: {name}'s Work Anniversary!\",\n",
+    "            f\"Don't forget to congratulate {name} on their Work Anniversary!\"\n",
+    "        )\n",
+    "    if wedding_anniversary:\n",
+    "        create_reminder(\n",
+    "            wedding_anniversary,\n",
+    "            f\"Reminder: {name}'s Wedding Anniversary!\",\n",
+    "            f\"Don't forget to wish {name} and {spouse_name} a Happy Wedding Anniversary!\"\n",
+    "        )\n",
+    "\n",
+    "print(\"Reminders for the whole year have been set successfully.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "id": "ff6a63bd",
    "metadata": {},
