--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3943eb47",
+   "id": "f539a1b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
     "    birthday = pd.to_datetime(row[\"Birthday\"], errors=\"coerce\").date() if not pd.isna(row[\"Birthday\"]) else None\n",
     "    work_anniversary = pd.to_datetime(row[\"Work Anniversary\"], errors=\"coerce\").date() if not pd.isna(row[\"Work Anniversary\"]) else None\n",
     "    wedding_anniversary = pd.to_datetime(row[\"Wedding Anniversary\"], errors=\"coerce\").date() if not pd.isna(row[\"Wedding Anniversary\"]) else None\n",
-    "    spouse_name = row[\"Spouse Name\"] if not pd.isna(row[\"Spouse Name\"]) else \"\"\n",
+    "    spouse_name = row[\"Spouse Name\"] if not pd.isna(row[\"Spouse Name\"]) else None\n",
     "\n",
     "    # Function to create a reminder in Outlook\n",
     "    def create_reminder(event_date, subject, body):\n",
@@ -45,7 +45,7 @@
     "                appointment.Body = body\n",
     "                appointment.Save()\n",
     "\n",
-    "    # Create reminders for each event type\n",
+    "    # Create reminders only if the data is available\n",
     "    if birthday:\n",
     "        create_reminder(\n",
     "            birthday,\n",
@@ -58,11 +58,17 @@
     "            f\"Reminder: {name}'s Work Anniversary!\",\n",
     "            f\"Don't forget to congratulate {name} on their Work Anniversary!\"\n",
     "        )\n",
-    "    if wedding_anniversary:\n",
+    "    if wedding_anniversary and spouse_name:\n",
     "        create_reminder(\n",
     "            wedding_anniversary,\n",
     "            f\"Reminder: {name}'s Wedding Anniversary!\",\n",
     "            f\"Don't forget to wish {name} and {spouse_name} a Happy Wedding Anniversary!\"\n",
+    "        )\n",
+    "    elif wedding_anniversary:\n",
+    "        create_reminder(\n",
+    "            wedding_anniversary,\n",
+    "            f\"Reminder: {name}'s Wedding Anniversary!\",\n",
+    "            f\"Don't forget to wish {name} a Happy Wedding Anniversary!\"\n",
     "        )\n",
     "\n",
     "print(\"Reminders for the whole year have been set successfully.\")\n"
