--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -7,30 +7,82 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import win32com.client\n",
+    "import pandas as pd\n",
+    "from openpyxl import Workbook\n",
     "\n",
-    "# Initialize Outlook\n",
-    "outlook = win32com.client.Dispatch(\"Outlook.Application\")\n",
-    "namespace = outlook.GetNamespace(\"MAPI\")\n",
+    "# Load the input Excel file\n",
+    "input_file = \"your_input_file.xlsx\"  # Replace with your input file path\n",
+    "output_file = \"organization_structure.xlsx\"  # Output file path\n",
     "\n",
-    "# Access the Calendar folder\n",
-    "calendar_folder = namespace.GetDefaultFolder(9)  # 9 = Calendar folder\n",
+    "# Read the data\n",
+    "df = pd.read_excel(input_file)\n",
     "\n",
-    "# Get all calendar items\n",
-    "items = calendar_folder.Items\n",
-    "items.IncludeRecurrences = True\n",
-    "items.Sort(\"[Start]\")  # Sort by start date\n",
+    "# Ensure consistent column names (case-insensitive matching)\n",
+    "df.columns = df.columns.str.strip()\n",
     "\n",
-    "# Iterate through calendar items\n",
-    "for appointment in items:\n",
-    "    try:\n",
-    "        if \"Reminder:\" in appointment.Subject:\n",
-    "            print(f\"Deleting: {appointment.Subject} on {appointment.Start}\")\n",
-    "            appointment.Delete()  # Delete the appointment\n",
-    "    except Exception as e:\n",
-    "        print(f\"Error processing appointment: {e}\")\n",
+    "# Unique countries\n",
+    "countries = df['Work Location Country/Territory Name'].dropna().unique()\n",
     "\n",
-    "print(\"All reminders containing 'Reminder:' have been removed.\")\n"
+    "# Create a new workbook\n",
+    "wb = Workbook()\n",
+    "wb.remove(wb.active)  # Remove the default sheet\n",
+    "\n",
+    "# Function to find subordinates\n",
+    "def find_subordinates(df, manager_name):\n",
+    "    return df[df['Entity Manager Employee Name'] == manager_name]\n",
+    "\n",
+    "# Process each country\n",
+    "for country in countries:\n",
+    "    # Filter data for the country\n",
+    "    country_df = df[df['Work Location Country/Territory Name'] == country]\n",
+    "    # Get unique BF Level 4 Names for the country\n",
+    "    bf_level_4_names = country_df['BF Level 4 Name'].dropna().unique()\n",
+    "\n",
+    "    # Create a sheet for this country\n",
+    "    for bf_level_4_name in bf_level_4_names:\n",
+    "        # Filter data for the BF Level 4 Name\n",
+    "        bf_df = country_df[country_df['BF Level 4 Name'] == bf_level_4_name]\n",
+    "\n",
+    "        # Sort data by Global Career Band (MD > 3 > 4 > ... > 8)\n",
+    "        bf_df['Global Career Band'] = bf_df['Global Career Band'].astype(str)  # Ensure values are strings\n",
+    "        sorted_bf_df = bf_df.sort_values('Global Career Band', key=lambda col: col.map(lambda x: 'MD' if x == 'MD' else int(x) if x.isdigit() else 999))\n",
+    "\n",
+    "        # Prepare data for three levels\n",
+    "        rows = []\n",
+    "        for _, level_1 in sorted_bf_df.iterrows():\n",
+    "            level_1_details = [level_1['Employee Name'], level_1['Global Career Band'], level_1['Position Title']]\n",
+    "            # Level 2 subordinates\n",
+    "            level_2_df = find_subordinates(df, level_1['Employee Name'])\n",
+    "            if not level_2_df.empty:\n",
+    "                for _, level_2 in level_2_df.iterrows():\n",
+    "                    level_2_details = [level_2['Employee Name'], level_2['Global Career Band'], level_2['Position Title']]\n",
+    "                    # Level 3 subordinates\n",
+    "                    level_3_df = find_subordinates(df, level_2['Employee Name'])\n",
+    "                    if not level_3_df.empty:\n",
+    "                        for _, level_3 in level_3_df.iterrows():\n",
+    "                            level_3_details = [level_3['Employee Name'], level_3['Global Career Band'], level_3['Position Title']]\n",
+    "                            rows.append(level_1_details + level_2_details + level_3_details)\n",
+    "                    else:\n",
+    "                        rows.append(level_1_details + level_2_details + [\"\", \"\", \"\"])\n",
+    "            else:\n",
+    "                rows.append(level_1_details + [\"\", \"\", \"\"] + [\"\", \"\", \"\"])\n",
+    "\n",
+    "        # Write data to the sheet\n",
+    "        sheet_name = f\"{bf_level_4_name} - {country}\"\n",
+    "        sheet_name = sheet_name[:31]  # Excel sheet names have a max length of 31\n",
+    "        sheet = wb.create_sheet(title=sheet_name)\n",
+    "        # Write headers\n",
+    "        sheet.append([\"Level 1 Employee Name\", \"Global Career Band\", \"Position Title\",\n",
+    "                      \"Level 2 Employee Name\", \"Global Career Band\", \"Position Title\",\n",
+    "                      \"Level 3 Employee Name\", \"Global Career Band\", \"Position Title\"])\n",
+    "        # Write rows\n",
+    "        for row in rows:\n",
+    "            sheet.append(row)\n",
+    "\n",
+    "# Save the workbook\n",
+    "wb.save(output_file)\n",
+    "\n",
+    "print(f\"Organization structure saved to {output_file}\")\n"
    ]
   },
   {
