--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "8b6967fe",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "d704b7fb",
    "metadata": {},
    "outputs": [],
@@ -51,19 +59,26 @@
     "        rows = []\n",
     "        for _, level_1 in sorted_bf_df.iterrows():\n",
     "            level_1_details = [level_1['Employee Name'], level_1['Global Career Band'], level_1['Position Title']]\n",
-    "            # Level 2 subordinates\n",
     "            level_2_df = find_subordinates(df, level_1['Employee Name'])\n",
+    "\n",
     "            if not level_2_df.empty:\n",
+    "                first_level_1 = True  # To track if Level 1 details have been added\n",
     "                for _, level_2 in level_2_df.iterrows():\n",
     "                    level_2_details = [level_2['Employee Name'], level_2['Global Career Band'], level_2['Position Title']]\n",
-    "                    # Level 3 subordinates\n",
     "                    level_3_df = find_subordinates(df, level_2['Employee Name'])\n",
+    "\n",
     "                    if not level_3_df.empty:\n",
+    "                        first_level_2 = True  # To track if Level 2 details have been added\n",
     "                        for _, level_3 in level_3_df.iterrows():\n",
     "                            level_3_details = [level_3['Employee Name'], level_3['Global Career Band'], level_3['Position Title']]\n",
-    "                            rows.append(level_1_details + level_2_details + level_3_details)\n",
+    "                            rows.append((level_1_details if first_level_1 else [\"\", \"\", \"\"]) +\n",
+    "                                        (level_2_details if first_level_2 else [\"\", \"\", \"\"]) +\n",
+    "                                        level_3_details)\n",
+    "                            first_level_1 = False\n",
+    "                            first_level_2 = False\n",
     "                    else:\n",
-    "                        rows.append(level_1_details + level_2_details + [\"\", \"\", \"\"])\n",
+    "                        rows.append((level_1_details if first_level_1 else [\"\", \"\", \"\"]) + level_2_details + [\"\", \"\", \"\"])\n",
+    "                        first_level_1 = False\n",
     "            else:\n",
     "                rows.append(level_1_details + [\"\", \"\", \"\"] + [\"\", \"\", \"\"])\n",
     "\n",
