--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,10 +3,43 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b6967fe",
+   "id": "bc592162",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from openpyxl import Workbook\n",
+    "from openpyxl.styles import Font, Alignment, PatternFill\n",
+    "from openpyxl.utils import get_column_letter\n",
+    "\n",
+    "def format_sheet(sheet):\n",
+    "    # Set the sheet name as the title in cell A1\n",
+    "    sheet_title = sheet.title\n",
+    "    sheet.merge_cells('A1:D1')  # Adjust range to suit the data width\n",
+    "    sheet['A1'] = sheet_title\n",
+    "    sheet['A1'].font = Font(bold=True, size=14)\n",
+    "    sheet['A1'].alignment = Alignment(horizontal='center')\n",
+    "\n",
+    "    # Style the header row\n",
+    "    header_fill = PatternFill(start_color=\"ADD8E6\", end_color=\"ADD8E6\", fill_type=\"solid\")  # Light blue background\n",
+    "    header_font = Font(bold=True)\n",
+    "    header_alignment = Alignment(horizontal='center', vertical='center')\n",
+    "\n",
+    "    for cell in sheet[2]:  # Assuming row 2 is the header\n",
+    "        cell.fill = header_fill\n",
+    "        cell.font = header_font\n",
+    "        cell.alignment = header_alignment\n",
+    "\n",
+    "    # Auto-adjust column widths to a fixed width\n",
+    "    fixed_width = 20  # Set desired width\n",
+    "    for col in sheet.columns:\n",
+    "        col_letter = get_column_letter(col[0].column)  # Get column letter\n",
+    "        sheet.column_dimensions[col_letter].width = fixed_width\n",
+    "\n",
+    "def save_formatted_workbook(workbook, filename):\n",
+    "    for sheet in workbook.worksheets:\n",
+    "        format_sheet(sheet)\n",
+    "    workbook.save(filename)\n"
+   ]
   },
   {
    "cell_type": "code",
