--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,18 +3,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bc592162",
+   "id": "10efdfc4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from openpyxl import Workbook\n",
+    "from openpyxl import load_workbook\n",
     "from openpyxl.styles import Font, Alignment, PatternFill\n",
     "from openpyxl.utils import get_column_letter\n",
     "\n",
     "def format_sheet(sheet):\n",
     "    # Set the sheet name as the title in cell A1\n",
     "    sheet_title = sheet.title\n",
-    "    sheet.merge_cells('A1:D1')  # Adjust range to suit the data width\n",
+    "    sheet.merge_cells('A1:I1')  # Adjust range based on your data width\n",
     "    sheet['A1'] = sheet_title\n",
     "    sheet['A1'].font = Font(bold=True, size=14)\n",
     "    sheet['A1'].alignment = Alignment(horizontal='center')\n",
@@ -24,21 +24,36 @@
     "    header_font = Font(bold=True)\n",
     "    header_alignment = Alignment(horizontal='center', vertical='center')\n",
     "\n",
-    "    for cell in sheet[2]:  # Assuming row 2 is the header\n",
+    "    # Assuming row 2 is the header row\n",
+    "    for cell in sheet[2]:  # Header row is the second row\n",
     "        cell.fill = header_fill\n",
     "        cell.font = header_font\n",
     "        cell.alignment = header_alignment\n",
     "\n",
-    "    # Auto-adjust column widths to a fixed width\n",
+    "    # Set fixed column width\n",
     "    fixed_width = 20  # Set desired width\n",
     "    for col in sheet.columns:\n",
     "        col_letter = get_column_letter(col[0].column)  # Get column letter\n",
     "        sheet.column_dimensions[col_letter].width = fixed_width\n",
     "\n",
-    "def save_formatted_workbook(workbook, filename):\n",
-    "    for sheet in workbook.worksheets:\n",
+    "def format_workbook(file_path, output_path):\n",
+    "    # Load the workbook\n",
+    "    wb = load_workbook(file_path)\n",
+    "\n",
+    "    # Format each sheet\n",
+    "    for sheet in wb.worksheets:\n",
     "        format_sheet(sheet)\n",
-    "    workbook.save(filename)\n"
+    "\n",
+    "    # Save the formatted workbook\n",
+    "    wb.save(output_path)\n",
+    "    print(f\"Formatted file saved as: {output_path}\")\n",
+    "\n",
+    "# Input and output file paths\n",
+    "input_file = \"organization_structure.xlsx\"\n",
+    "output_file = \"formatted_organization_structure.xlsx\"\n",
+    "\n",
+    "# Call the function to format the workbook\n",
+    "format_workbook(input_file, output_file)\n"
    ]
   },
   {
