--- a/billing process.ipynb
+++ b/billing process.ipynb
@@ -3,6 +3,98 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "f6a4536e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import openpyxl\n",
+    "from pptx import Presentation\n",
+    "from pptx.util import Pt\n",
+    "from pptx.dml.color import RGBColor\n",
+    "\n",
+    "def extract_hierarchy(sheet):\n",
+    "    hierarchy = {}\n",
+    "    for row in sheet.iter_rows(min_row=3, values_only=True):  # Start reading data from row 3\n",
+    "        level1, level2, level3 = row[0:3], row[3:6], row[6:9]\n",
+    "        manager1 = \" | \".join([str(x) for x in level1 if x])\n",
+    "        manager2 = \" | \".join([str(x) for x in level2 if x])\n",
+    "        employee = \" | \".join([str(x) for x in level3 if x])\n",
+    "\n",
+    "        if manager1 not in hierarchy:\n",
+    "            hierarchy[manager1] = {}\n",
+    "        if manager2 not in hierarchy[manager1]:\n",
+    "            hierarchy[manager1][manager2] = []\n",
+    "        hierarchy[manager1][manager2].append(employee)\n",
+    "\n",
+    "    return hierarchy\n",
+    "\n",
+    "def add_slide_with_chart(presentation, sheet_name, hierarchy):\n",
+    "    slide = presentation.slides.add_slide(presentation.slide_layouts[5])  # Blank slide\n",
+    "    # Add title\n",
+    "    title = slide.shapes.title\n",
+    "    title.text = sheet_name\n",
+    "    title.text_frame.paragraphs[0].font.bold = True\n",
+    "    title.text_frame.paragraphs[0].font.size = Pt(24)\n",
+    "\n",
+    "    # Add text box for the org chart\n",
+    "    left = Pt(50)\n",
+    "    top = Pt(100)\n",
+    "    width = Pt(800)\n",
+    "    height = Pt(500)\n",
+    "    text_box = slide.shapes.add_textbox(left, top, width, height)\n",
+    "    text_frame = text_box.text_frame\n",
+    "    text_frame.word_wrap = True\n",
+    "    text_frame.margin_left = Pt(10)\n",
+    "    text_frame.margin_top = Pt(10)\n",
+    "\n",
+    "    # Build the org chart text\n",
+    "    text_frame.text = f\"Organizational Chart for {sheet_name}\\n\"\n",
+    "    for manager1, sub_hierarchy in hierarchy.items():\n",
+    "        p = text_frame.add_paragraph()\n",
+    "        p.text = manager1\n",
+    "        p.font.bold = True\n",
+    "        p.font.size = Pt(16)\n",
+    "        p.font.color.rgb = RGBColor(0, 51, 102)  # Dark blue\n",
+    "\n",
+    "        for manager2, employees in sub_hierarchy.items():\n",
+    "            p2 = text_frame.add_paragraph()\n",
+    "            p2.text = f\"    {manager2}\"\n",
+    "            p2.font.bold = False\n",
+    "            p2.font.size = Pt(14)\n",
+    "            p2.font.color.rgb = RGBColor(0, 102, 0)  # Green\n",
+    "\n",
+    "            for employee in employees:\n",
+    "                p3 = text_frame.add_paragraph()\n",
+    "                p3.text = f\"        {employee}\"\n",
+    "                p3.font.size = Pt(12)\n",
+    "                p3.font.color.rgb = RGBColor(0, 0, 0)  # Black\n",
+    "\n",
+    "def generate_organizational_ppt(excel_file, ppt_file):\n",
+    "    # Load the Excel workbook\n",
+    "    workbook = openpyxl.load_workbook(excel_file)\n",
+    "    presentation = Presentation()\n",
+    "\n",
+    "    # Iterate through sheets and process data\n",
+    "    for sheet_name in workbook.sheetnames:\n",
+    "        sheet = workbook[sheet_name]\n",
+    "        hierarchy = extract_hierarchy(sheet)\n",
+    "        add_slide_with_chart(presentation, sheet_name, hierarchy)\n",
+    "\n",
+    "    # Save the PowerPoint\n",
+    "    presentation.save(ppt_file)\n",
+    "    print(f\"PPT saved as {ppt_file}\")\n",
+    "\n",
+    "# Input Excel and output PPT file paths\n",
+    "input_excel = \"formatted_organization_structure.xlsx\"\n",
+    "output_ppt = \"organization_structure_presentation.pptx\"\n",
+    "\n",
+    "# Generate the presentation\n",
+    "generate_organizational_ppt(input_excel, output_ppt)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "10efdfc4",
    "metadata": {},
    "outputs": [],
